--- a/UnityEmbeddedWPF/UnityEmbeddedWPF.csproj
+++ b/UnityEmbeddedWPF/UnityEmbeddedWPF.csproj
@@ -65,6 +65,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="MainWindow.xaml.TCPClient.cs" />
     <Compile Include="MainWindow.xaml.EmbeddedUnity.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
